--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -225,3 +225,7 @@
   }
 }
 
+.modal-open {
+  overflow: hidden;
+}
+
